# medical-appointment-app

./: README.md  package-lock.json
.github/workflows/: ci.yml
Backend/: MedicalAppointment.slnx
Backend/MedicalAppointment.Api/: MedicalAppointment.Api.csproj  MedicalAppointment.Api.http  Program.cs  appsettings.json
Backend/MedicalAppointment.Api/Controllers/: AiController.cs  AppointmentController.cs  DoctorController.cs  PatientController.cs
Backend/MedicalAppointment.Api/OpenAI/: OpenAiClient.cs  OpenAiOptions.cs
Backend/MedicalAppointment.Api/Properties/: launchSettings.json
Backend/MedicalAppointment.Application/: MedicalAppointment.Application.csproj
Backend/MedicalAppointment.Application/ExportCSV/: ICsvExporter.cs
Backend/MedicalAppointment.Application/IServices/: IAppointmentService.cs  IAvailabilityService.cs  IDoctorService.cs  IPatientService.cs
Backend/MedicalAppointment.Application/Services/: AppointmentService.cs  AvailabilityService.cs  DoctorService.cs  PatientService.cs
Backend/MedicalAppointment.Domain/Entities/: Appointment.cs  AvailablilitySlot.cs  Doctor.cs  Patient.cs
Backend/MedicalAppointment.Domain/Exceptions/: DomainValidationException.cs
Backend/MedicalAppointment.Infrastructure/: MedicalAppointment.Infrastructure.csproj
CLI/: App.cpp  App.hpp  CMakeLists.txt  Doctor.cpp  Doctor.hpp  HospitalManager.cpp  HospitalManager.hpp  HttpClient.cpp  HttpClient.hpp  Patient.cpp  Patient.hpp  Validator.cpp  Validator.hpp  main.cpp
Frontend/: package-lock.json  package.json  vite.config.js
Frontend/src/: App.tsx  index.css
(+66 files in other folders)
